--- a/etc/pkg_util.properties
+++ b/etc/pkg_util.properties
@@ -10,3 +10,11 @@ log4cplus.appender.AsyncPkgUtilLogFile.Appender.layout=log4cplus::TTCCLayout
 log4cplus.appender.AsyncPkgUtilLogFile.Appender.layout.ContextPrinting=true
 log4cplus.appender.AsyncPkgUtilLogFile.Appender.layout.DateFormat=%FT%T.%q %Z
 log4cplus.appender.AsyncPkgUtilLogFile.Appender.layout.Use_gmtime=false
+
+log4cplus.appender.Console=log4cplus::ConsoleAppender
+log4cplus.appender.Console.Threshold=WARN
+log4cplus.appender.Console.logToStdErr=1
+log4cplus.appender.Console.layout=log4cplus::TTCCLayout
+log4cplus.appender.Console.layout.ContextPrinting=true
+log4cplus.appender.Console.layout.DateFormat=%FT%T.%q %Z
+log4cplus.appender.Console.layout.Use_gmtime=false
